# Anova4All

./: .gitignore  Dockerfile  README.md  go.mod  go.sum  icon.psd  index.html  init.sql  main.py  pyproject.toml
.github/workflows/: deploy-ui.yaml
.windsurf/: store_integration_plan.md
app/: OpenAPI.md  api.py  deps.py  event_stream.py  main.py  models.py  settings.py  sse.py
app/frontend/: .eslintcache  .pnp.cjs  index.html  package.json  tailwind.config.js  vite.config.ts
assets/: index-B8OXliwW.js  index-BLyuRtLQ.css  index-BPBIuL63.js  index-BqzKokkz.js  index-CnI7pa-i.js  index-Cz2kfQNt.js  index-DHjSr7J1.js  index-M3T5Kbpp.js  index-Tqya1pBm.js  index-aNsPAq1G.css
cmd/anova4all/: main.go
frontend/: .eslintcache  .gitignore  .pnp.cjs  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: index.css  main.tsx
internal/rest/: auth.go  ble.go  device.go  models.go  no_ble.go  no_wifi.go  service.go  sse.go  wifi.go
internal/store/: models.go  store.go
pkg/ble/: ble.go
pkg/commands/: ble.go  common.go  types.go  wifi.go
pkg/wifi/: connection.go  device.go  encoding.go  encoding_test.go  event.go  manager.go  server.go
python/: README.md
python/app/: OpenAPI.md  README.md  api.py  deps.py  event_stream.py  sse.py
research/: Anova WiFi Protocol Design.md  Anova WiFi Protocol Summary.md  README.md  analysis.ipynb  ble.md  parse_to_csv.py
src/: api.py
src/anova_ble/: client.py  cmds.py  types.py
src/anova_wifi/: commands.py  connection.py  device.py  encoding.py  event.py  manager.py  server.py  test_data.csv  (+1 more)
(+39 files in other folders)
