[tool.poetry]
name = "fuckanova"
version = "0.1.0"
description = ""
authors = ["almogbaku <almog.baku@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
asyncer = "^0.0.8"
fastapi = {extras = ["standard"], version = "^0.114.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
